; ModuleID = '/home/carl/AnghaBench/linux/net/rds/extr_recv.c_rds_start_mprds.c'
source_filename = "/home/carl/AnghaBench/linux/net/rds/extr_recv.c_rds_start_mprds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rds_connection = type { i32, %struct.rds_conn_path*, i32, i32 }
%struct.rds_conn_path = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rds_connection*)* @rds_start_mprds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rds_start_mprds(%struct.rds_connection* %0) #0 {
  %2 = alloca %struct.rds_connection*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.rds_conn_path*, align 8
  store %struct.rds_connection* %0, %struct.rds_connection** %2, align 8
  %5 = load %struct.rds_connection*, %struct.rds_connection** %2, align 8
  %6 = getelementptr inbounds %struct.rds_connection, %struct.rds_connection* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = icmp sgt i32 %7, 1
  br i1 %8, label %9, label %36

9:                                                ; preds = %1
  %10 = load %struct.rds_connection*, %struct.rds_connection** %2, align 8
  %11 = getelementptr inbounds %struct.rds_connection, %struct.rds_connection* %10, i32 0, i32 3
  %12 = load %struct.rds_connection*, %struct.rds_connection** %2, align 8
  %13 = getelementptr inbounds %struct.rds_connection, %struct.rds_connection* %12, i32 0, i32 2
  %14 = call i64 @rds_addr_cmp(i32* %11, i32* %13)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %36

16:                                               ; preds = %9
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %32, %16
  %18 = load i32, i32* %3, align 4
  %19 = load %struct.rds_connection*, %struct.rds_connection** %2, align 8
  %20 = getelementptr inbounds %struct.rds_connection, %struct.rds_connection* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = icmp slt i32 %18, %21
  br i1 %22, label %23, label %35

23:                                               ; preds = %17
  %24 = load %struct.rds_connection*, %struct.rds_connection** %2, align 8
  %25 = getelementptr inbounds %struct.rds_connection, %struct.rds_connection* %24, i32 0, i32 1
  %26 = load %struct.rds_conn_path*, %struct.rds_conn_path** %25, align 8
  %27 = load i32, i32* %3, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds %struct.rds_conn_path, %struct.rds_conn_path* %26, i64 %28
  store %struct.rds_conn_path* %29, %struct.rds_conn_path** %4, align 8
  %30 = load %struct.rds_conn_path*, %struct.rds_conn_path** %4, align 8
  %31 = call i32 @rds_conn_path_connect_if_down(%struct.rds_conn_path* %30)
  br label %32

32:                                               ; preds = %23
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %3, align 4
  br label %17

35:                                               ; preds = %17
  br label %36

36:                                               ; preds = %35, %9, %1
  ret void
}

declare dso_local i64 @rds_addr_cmp(i32*, i32*) #1

declare dso_local i32 @rds_conn_path_connect_if_down(%struct.rds_conn_path*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
